# docker-foresight

./: Dockerfile  README.md  pyproject.toml
docker_foresight/: cli.py  docker_foresight.py
tests/: test_docker_foresight.py
